feat: report damaged road
